# odoo

./: .gitignore  .pre-commit-config.yaml  DockerFile  Makefile  README.md  docker-compose.yml  entrypoint.sh
.github/workflows/: ci_pylint_bandit.yml
addons/: pylint.cfg  pyproject.toml
addons/checklist_management/: __manifest__.py
addons/checklist_management/models/: models.py
addons/checklist_management/security/: ir.model.access.csv
addons/checklist_management/views/: views.xml
config/: odoo.conf
